--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
 			
 				<a href="/smsalaken.github.iotags/gvis"><span class="label label-success">gvis</span></a>
 			
+				<a href="/smsalaken.github.iotags/r"><span class="label label-success">r</span></a>
+			
 		</small>
 		
 	</div>
